--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Run with Gradle
         run: |
           sudo timedatectl set-timezone Asia/Seoul
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git config --global user.name "github-actions[bot]"
+          git config --global user.email "jinyoungchoi95@gmail.com"
+          git config --global user.name "jinyoungchoi95"
           git remote add upstream https://github.com/woowacourse-study/2022-daily-planner.git
           git fetch upstream main
           git rebase upstream/main
