--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -35,4 +35,4 @@ jobs:
         with:
           github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
           branch: ${{ github.ref }}
-          force: 'true'
+          force: true
