--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -34,5 +34,5 @@ jobs:
         uses: ad-m/github-push-action@master
         with:
           github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
-          branch: ${{ github.ref }}
+          branch: ${{ github.head_ref }}
           force: true
