--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -32,6 +32,6 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           branch: ${{ github.head_ref }}
           force: true
