--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -32,3 +32,4 @@ jobs:
         uses: CasperWA/push-protected@v2
         with:
           token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
+          unprotect_reviews: true
