--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -20,14 +20,17 @@ jobs:
         run: chmod +x gradlew
       - name: Run with Gradle
         run: |
+          REPO_REF="https://jinyoungchoi95:${{ secrets.DAILY_PLANNER_ACTION_KEY }}@github.com/woowacourse-study/2022-daily-planner.git"
           sudo timedatectl set-timezone Asia/Seoul
+          git config http.sslVerify false
           git config --global user.email "jinyoungchoi95@gmail.com"
           git config --global user.name "jinyoungchoi95"
-          git remote add upstream https://github.com/woowacourse-study/2022-daily-planner.git
+          git remote add upstream "${REPO_REF}"
           git fetch upstream main
           git rebase upstream/main
           ./gradlew run
           git commit --allow-empty -m "refresh dash board in README.md" -a
+          git push upstream main
       - uses: colmose/push-bot@v1.0.0
         with:
           token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
