--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -26,8 +26,11 @@ jobs:
           git config --global user.email "jinyoungchoi95@gmail.com"
           git config --global user.name "jinyoungchoi95"
           git remote add upstream "${REPO_REF}"
+          git branch --verbose
+          
           git fetch upstream main
           git rebase upstream/main
           ./gradlew run
           git commit --allow-empty -m "refresh dash board in README.md" -a
-          git push upstream main -f
+          git pull -rebase upstream main
+          git push upstream main
