--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -24,6 +24,7 @@ jobs:
           sudo timedatectl set-timezone Asia/Seoul
           git config --global user.email "jinyoungchoi95@gmail.com"
           git config --global user.name "jinyoungchoi95"
+          printf "${REPO_REF}"
           git remote add upstream "${REPO_REF}"
           
           git fetch upstream main
