--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -20,12 +20,10 @@ jobs:
         run: chmod +x gradlew
       - name: Run with Gradle
         run: |
-          REPO_REF="https://${{ secrets.DAILY_PLANNER_ACTION_KEY }}@github.com/woowacourse-study/2022-daily-planner.git"
           sudo timedatectl set-timezone Asia/Seoul
           git config --global user.email "jinyoungchoi95@gmail.com"
           git config --global user.name "jinyoungchoi95"
-          printf "${REPO_REF}"
-          git remote add upstream "${REPO_REF}"
+          git remote add upstream https://${{ secrets.DAILY_PLANNER_ACTION_KEY }}@github.com/woowacourse-study/2022-daily-planner.git
           
           git fetch upstream main
           git rebase upstream/main
