--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -9,6 +9,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+        with:
+          token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
 
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2
@@ -19,16 +21,14 @@ jobs:
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Run with Gradle
-        env:
-          DAILY_PLANNER_ACTION_KEY: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
         run: |
           sudo timedatectl set-timezone Asia/Seoul
           git config --global user.email "jinyoungchoi95@gmail.com"
           git config --global user.name "jinyoungchoi95"
-          git remote add upstream https://"$env:DAILY_PLANNER_ACTION_KEY"@github.com/woowacourse-study/2022-daily-planner.git
+          git remote add upstream https://github.com/woowacourse-study/2022-daily-planner.git
           
           git fetch upstream main
           git rebase upstream/main
           ./gradlew run
           git commit --allow-empty -m "refresh dash board in README.md" -a
-          git push upstream main
+          git push upstream main -f
