--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -8,9 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: ad-m/github-push-action@master
+      - uses: actions/checkout@v2
         with:
-          github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
+          token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
 
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2
@@ -31,4 +31,8 @@ jobs:
           git rebase upstream/main
           ./gradlew run
           git commit --allow-empty -m "refresh dash board in README.md" -a
-          git push upstream main -f
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
+          force: true
