--- a/.github/workflows/refresh_dashboard.yml
+++ b/.github/workflows/refresh_dashboard.yml
@@ -5,12 +5,11 @@ on:
     branches: [ main ]
 jobs:
   build:
+
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
 
       - name: Set up JDK 1.11
         uses: actions/setup-java@v2
@@ -23,10 +22,9 @@ jobs:
       - name: Run with Gradle
         run: |
           sudo timedatectl set-timezone Asia/Seoul
-          git config --global user.email "jinyoungchoi95@gmail.com"
-          git config --global user.name "jinyoungchoi95"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.name "github-actions[bot]"
           git remote add upstream https://github.com/woowacourse-study/2022-daily-planner.git
-          
           git fetch upstream main
           git rebase upstream/main
           ./gradlew run
@@ -34,5 +32,5 @@ jobs:
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.DAILY_PLANNER_ACTION_KEY }}
-          force: true
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
